tests/ui/nll/issue-98693.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/issue-98693.rs:16:9
   |
LL |         assert_static::<T>();
   |         ^^^^^^^^^^^^^^^^^^^^
   |         |
   |         the parameter type `T` must be valid for the static lifetime...
   |         ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn test<T: 'static>() {
   |          +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
